mudei pra testar

--- a/index_novo.html
+++ b/index_novo.html
@@ -6,7 +6,7 @@
     <body>
         <header>
             <div class="container">
-                <h1 class="h1-2">Organizador de Cartas do Kaicon</h1>
+                <h1 class="h1-2">Organizador de Cartas do Kaicon hell yea</h1>
             </div>
         </header>
         <main>
