--- a/index_novo.html
+++ b/index_novo.html
@@ -7,7 +7,7 @@
         <header>
             <div class="container">
                 <h1 class="h1-2">Organizador de Cartas do Kaicon hell yea</h1>
-                <h2 class="h1-2">Gizele atrapalhando Kaique</h2>
+                <h2 class="h1-2">Carta do Kaicon</h2>
             </div>
         </header>
         <main>
