--- a/index_novo.html
+++ b/index_novo.html
@@ -8,6 +8,7 @@
             <div class="container">
                 <h1 class="h1-2">Organizador de Cartas do Kaicon hell yea</h1>
                 <h2 class="h1-2">Carta do Kaicon</h2>
+                <h3 class="h1-2">Outras informações</h3>
             </div>
         </header>
         <main>
